# mlws

./: .gitignore  LICENSE  README.md  deps.toml  enter.sh  environment.yml  environment_langchain.yml  environment_mass.yml  environment_nlp.yml  environment_small.yml  failed.txt  flake.nix  lazy.sh  missing.txt  poetry.lock.old  pyproject.toml  text-to-image.py  unfree.nix
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
test/: fix_ld_path.sh  test_langchain.py  test_vizdoom.py  test_vizdoom_torch.py  torch.py  torch_cuda.py
