[tool.poetry]
name = "mlws"
version = "0.1.0"
description = "A Machine Learning Workspace"
authors = ["LizeLive <git@lize.live>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
# azure sdk always must be newest
azure-ai-ml = '1.5.0'
# azureml-sdk = '1.49.0'


# mlflow = "*"
# tensorboard = "*"
# xturing = "^0.0.9"
torch = "^2"
numba = "^0.56.4"
farm-haystack = {extras = ["all-gpu"], version = "^1.15.1"}
langchain = "^0.0.136"

[tool.poetry.group.dev.dependencies]
black = "^23"
ipykernel = "^6"
ipywidgets = "^8"
matplotlib = "^3"
pytest = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
