[tool.poetry]
name = "mlws"
version = "0.1.0"
description = ""
authors = ["lizelive <git@lize.live>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
black = "*"
ipykernel = "*"
# accelerate = "*"
# datasets = "*"
diffusers = "*"
# gradio = "*"
# huggingface-hub = "*"
# imgaug = "*"
# lightning = "*"
# optimum = "*"
# optuna = "*"
# peft = "*"
# ray = "*"
# safetensors = "*"
# sentencepiece = "*"
# tensorboard = "*"
# timm = "*"
# tokenizers = "*"
# torch = "*"
# torchaudio = "*"
# torchmetrics = "*"
# torchvision = "*"
# transformers = "*"
# controlnet_aux = "*"

# to prevent issues with build
# orjson = "3.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mlws = 'mlws:main'